--- a/CommitDiary_SwiftUI/CommitDiary_SwiftUI/Utility/en.lproj/Localizable.strings
+++ b/CommitDiary_SwiftUI/CommitDiary_SwiftUI/Utility/en.lproj/Localizable.strings
@@ -53,6 +53,7 @@
 "Github 계정으로 시작하기" = "Github Login";
 "기록을 작성해주세요." = "Please make a diary.";
 "모든 값을 입력해주세요." = "Please enter all values.";
+"테마가 변경되었습니다!" = "Change the theme!";
 "로그아웃 하시겠습니까?" = "Do you want to log out?";
 "취소" = "Cancel";
 "확인" = "Done";
